    - new output column "partialRel": proportion of explainable variance of a feature tracable to a metavariable
      (e.g. partialRel = 0.5 --> metavariable x can explain 50% of all explainable variance of fature y -- all other metavariables significantly associated to feature y can explain the remaining 50% of overall explainable variance of fature y)
  - BuildHeatmap()
    - added "plotPartial" argument to choose between
      - "marginal": plotting naive/marginal effect sizes based on CLiff's Delta/Spearman's Rho
      - "partial": plotting signed partial R-squared, including an additional column showing the total explainable variance per feature
      - "partialRel": plotting proportion of explainable variance of a feature tracable to a metavariable

Version 1.0.2
  - CRAN release

Version 1.0.1
  - fixes for CRAN resubmission

Version 1.0.0
  - CRAN submission

Version 0.3.1
  - reduced side effects after interrupted metadeconfoundR runs (tmp file removal)
  - bugfix: Qcutoff now correctly used to collect potential confounders from naive associations
  - improved initial input data quality control (order, problematic row-/colnames, class)
  - minor bugfixes in Buildheatmap()
  - added LogLevel argument to change verbositiy of logging

Version 0.3.0
  - randomVar argument is now simplified: just supply character vector of metaMat variables to be treated as random effects (e.g. randomVar = c("var1", "var5"))
  - NEW fixedVar argument implemented: same usage as randomVar, but adds fixed effect terms to all models
  - implemented computational speed-up for datasets with large number of metavariables
  - metadeconfoundR is now compatible with Unix AND Windows operation systems
  - fixed a bug that lead to an error when a feature with extremely low number non-NA values was present in featureMat
  - improved error messaging for an error in BuildHeatmap function