@@ -6,11 +6,18 @@ Version 1.0.3
       other metavariables associated to the feature
     - new output column "partialRel": proportion of explainable variance of a feature tracable to a metavariable
       (e.g. partialRel = 0.5 --> metavariable x can explain 50% of all explainable variance of fature y -- all other metavariables significantly associated to feature y can explain the remaining 50% of overall explainable variance of fature y)
+    - new output column "PartialNorm": proportion of explained variance of a metavariable set in relation to maximally explainable variance (i.e. variance not explainable by all other metavariables)
+  - bug fix of bug disabling computation of confidence intervalls of lrts
+  - implementaion of truly linear computation mode when nnodes = 1
+  - additional test to filter out non trustworthy lrts in some scenarios with highly colinear metavariables
+
   - BuildHeatmap()
     - added "plotPartial" argument to choose between
       - "marginal": plotting naive/marginal effect sizes based on CLiff's Delta/Spearman's Rho
       - "partial": plotting signed partial R-squared, including an additional column showing the total explainable variance per feature
       - "partialRel": plotting proportion of explainable variance of a feature tracable to a metavariable
+      - "partialNorm": plotting respective normalized partial effect size
+
 
 Version 1.0.2
   - CRAN release
